# ros2-auto-drone

./: .clang-format  .gitignore  README.md  ardupilot_sitl_ArduCopter_params.parm  detect.py  detect_main.py  detect_utils.py  jetson_ros2_test.py  main.py  mavlink_test.py  test_main.py  trt_detect.py
conversion/: to_trt.py
conversion/jetson/: trtexec.md
docker/: Dockerfile  zed.Dockerfile
docker/amd64/: mavros.Dockerfile  zed.Dockerfile
docker/jetson/: Dockerfile  docker-compose.yml  entrypoint.sh  mavros.Dockerfile  ros_entrypoint.sh  zed.Dockerfile  zed_base.Dockerfile
models/avocado/avo_53/: results.csv
models/avocado/yolov8l_labeler_n_42/: args.yaml  events.out.tfevents.1699089706.xtrana-pc.138894.0  results.csv
models/landing/train134/: args.yaml  results.csv
old_scripts/: jetson_norfair.py  norfair_tracking.py  trt_with_zed_new.py  zed_object_tracking.py
ros2/: Dockerfile  docker-compose.yml  entrypoint.sh  mavros.Dockerfile  mavros_entrypoint.sh  zed.Dockerfile
ros2/drone_control_pkg/: package.xml  setup.py
ros2/drone_control_pkg/config/: apm_config.yaml  apm_params.yaml  apm_pluginlists.yaml
ros2/drone_controller_pkg/: setup.py
ros2/drone_launch/: package.xml  setup.py
ros2/drone_pkg/: package.xml  setup.py
ros2/drone_pkg/drone_pkg/: TODO  (+4 more)
ros2/drone_vision_pkg/: package.xml  setup.py
ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/log/: latest_build
ros2/my_package/: package.xml  setup.py
ros2/src/drone_pose_pkg/: CMakeLists.txt  package.xml
ros2/src/drone_pose_pkg/src/: drone_pose_node.cpp  drone_pose_node.hpp  drone_pose_node_main.cpp
ros2/vision_pose/: setup.cfg  setup.py
scripts/: jetson_ros2_test.py  trt_with_zed_new.py  trt_yolov8_utils.py
tracking/: example_tracking.py  jetson_norfair.py
(+88 files in other folders)
